# syscalls-table

./: MANIFEST.in  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: build-and-upload-to-pypi.yml  build.yaml  create-pr-for-updating-tables.yml  generate-system-calls-html.yml  make-a-release.yaml  pr-generate-system-calls-html.yml  update-tables-and-create-pr.yml  update-tables.yml  upload-to-pages.yaml
data/: architectures-present-in-kernel.text  syscall-names.text
data/tables/: syscalls-alpha  syscalls-arc  syscalls-arm  syscalls-arm64  syscalls-armoabi  syscalls-csky  syscalls-hexagon  syscalls-i386  syscalls-ia64  syscalls-loongarch32  syscalls-loongarch64  syscalls-m68k  syscalls-microblaze  syscalls-mips64  syscalls-mips64n32  syscalls-mipso32  syscalls-nios2  syscalls-openrisc  syscalls-parisc  syscalls-parisc64  syscalls-powerpc  syscalls-powerpc64  syscalls-riscv32  syscalls-riscv64  syscalls-s390  syscalls-s390x  syscalls-sh  syscalls-sparc  syscalls-sparc64  syscalls-x32  syscalls-x86_64  syscalls-xtensa
examples/: check-for-dead-entries.py  generate-html-table.py  stats-for-supported-archs.py
scripts/: update-tables.sh
system_calls/: __init__.py  architectures_in_kernel.py  cli.py  linux_version.py
system_calls/tables/: alpha.py  arc.py  arm.py  arm64.py  armoabi.py  csky.py  hexagon.py  i386.py  ia64.py  loongarch32.py  loongarch64.py  m68k.py  microblaze.py  mips64.py  mips64n32.py  mipso32.py  names.py  nios2.py  openrisc.py  parisc.py  parisc64.py  powerpc.py  powerpc64.py  riscv32.py  riscv64.py  s390.py  s390x.py  sh.py  sparc.py  sparc64.py  x32.py  x86_64.py  xtensa.py
system_calls/tests/: test_syscalls.py
templates/: syscalls.html.j2
